--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@remix-run/serve": "^2.9.1",
     "csv": "^6.3.8",
     "isbot": "^4.1.0",
+    "luxon": "^3.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remix-auth": "^3.6.0",
