--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "@remix-run/node": "^2.9.1",
     "@remix-run/react": "^2.9.1",
     "@remix-run/serve": "^2.9.1",
+    "@types/luxon": "^3.4.2",
     "csv": "^6.3.8",
     "isbot": "^4.1.0",
     "luxon": "^3.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "remix-auth": "^3.6.0",
-    "tsx": "^4.9.3"
+    "tsx": "^4.9.3",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.9.1",
