--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "sideEffects": false,
   "type": "module",
+  "packageManager": "pnpm@9.4.0",
   "scripts": {
     "build": "remix vite:build",
     "dev": "remix vite:dev",
